Added package installs for Class 1In class
added {fs} and {withr} that are used in the parameterized reporting

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -11,7 +11,7 @@ book:
   open-graph: true
   chapters:
     - index.qmd
-    - intro.qmd
+    #- intro.qmd
     
     - part: "Part 1: Data Analysis Bootcamp"
       chapters:
